@@ -102,10 +102,6 @@ class AbstractSettings(object):
     def set_subtitle_languages(self, value):
         return self.set_int(constants.setting.SUBTITLE_LANGUAGE, value)
 
-    def requires_dual_login(self):
-        return self.get_bool('youtube.folder.my_subscriptions.show', True) or \
-               self.get_bool('youtube.folder.my_subscriptions_filtered.show', True)
-
     def use_thumbnail_size(self):
         size = self.get_int(constants.setting.THUMB_SIZE, 0)
         sizes = {0: 'medium', 1: 'high'}
